--- a/server/package.json
+++ b/server/package.json
@@ -5,20 +5,23 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.2",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
-    "passport-google-oauth2": "^0.2.0",
-    "axios": "^1.7.7",
-    "node-cron": "^3.0.3"
+    "passport-google-oauth2": "^0.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
